@@ -1,6 +1,6 @@
 {
   "name": "simp-pupmod",
-  "version": "6.0.9",
+  "version": "6.0.10",
   "author": "SIMP",
   "summary": "A puppet module to manage puppet",
   "license": "Apache-2.0",
@@ -10,7 +10,9 @@
   "tags": [
     "simp",
     "ci",
-    "pupmod"
+    "pupmod",
+    "puppetserver",
+    "puppet"
   ],
   "dependencies": [
     {
