@@ -1,3 +1,6 @@
+* Tue Nov 17 2016 Nick Miller <nick.miller@onyxpoint.com> - 6.0.9-0
+- Fixed validatation of environmentpath
+
 * Mon Nov 07 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.9-0
 - Expanded pupmod::ssldir so that the puppet-specific, '$vardir'
   string no longer appears in the puppet_master audit rule.
